<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/bg2"
    tools:context=".HomeActivity">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:layout_centerHorizontal="true"
        android:id="@+id/bt1"
        android:layout_marginTop="30dp"
        android:text="@string/insert"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/bt2"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_round"

        android:text="@string/read"
        android:layout_below="@id/bt1"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/bt3"
        android:layout_marginTop="30dp"
        android:text="@string/update"
        android:background="@drawable/button_round"
        android:layout_below="@id/bt2"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt4"
        android:layout_marginTop="30dp"
        android:text="@string/delete"
        android:background="@drawable/button_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt3"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_round"
        android:text="@string/back"
        android:layout_marginTop="100dp"
        android:layout_below="@id/bt4"

        android:id="@+id/bkLog"/>

</RelativeLayout>